--- a/project03/.settings/org.eclipse.wst.common.component
+++ b/project03/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/project3/target/classes"/>
-        <property name="context-root" value="homme"/>
+        <property name="context-root" value="project3"/>
     </wb-module>
 </project-modules>
