--- a/project03/src/main/webapp/WEB-INF/views/template/header.jspf
+++ b/project03/src/main/webapp/WEB-INF/views/template/header.jspf
@@ -3,6 +3,18 @@
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 	<link rel="stylesheet" type="text/css" 
 		href="${pageContext.request.contextPath }/resources/css/bootstrap.css"/>
+	<script type="text/javascript" 
+	src="${pageContext.request.contextPath }/resources/js/jquery-1.12.4.min.js"></script>
+	<script type="text/javascript" 
+	src="${pageContext.request.contextPath }/resources/js/bootstrap.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+		$("#logoutBtn").on("click", function(){
+			location.href="/logout";
+		})
+		
+	})
+	</script>
 	<style type="text/css">
 		.login {
 			text-align: right;
@@ -18,18 +30,4 @@
 			text-decoration: none;
 			color: black;
 		}
-		.item > img {
-			margin: 0px auto;
-		}
-		.item > img{
-			height: 650px;
-			width: 335px;
-		}
-	</style>
-	<script type="text/javascript" 
-	src="${pageContext.request.contextPath }/resources/js/jquery-1.12.4.min.js"></script>
-	<script type="text/javascript" 
-	src="${pageContext.request.contextPath }/resources/js/bootstrap.js"></script>
-	<script type="text/javascript">
-	
-	</script>
+		</style>
