--- a/project03/src/main/webapp/WEB-INF/views/template/menu.jspf
+++ b/project03/src/main/webapp/WEB-INF/views/template/menu.jspf
@@ -1,9 +1,18 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
- <div class="login">
-	<p><a href="${pageContext.request.contextPath }/login">로그인&nbsp;&nbsp;&nbsp;l</a></p>
-	<p><a href="${pageContext.request.contextPath }/join">&nbsp;&nbsp;&nbsp;회원가입</a></p>
-</div>
+    
+<form name='homeForm' method="post" action="/login">
+			<div class="login">
+				<c:if test="${customer != null}">
+					<p>${customer.user_name }님 로그인 중</p><br/>
+				<p><a href="./logout">로그아웃</a></p>
+				</c:if>
+				<c:if test="${customer == null}">
+				<p><a href="${pageContext.request.contextPath }/login">로그인&nbsp;&nbsp;&nbsp;l</a></p>
+				<p><a href="${pageContext.request.contextPath }/register">&nbsp;&nbsp;&nbsp;회원가입</a></p>
+				</c:if>
+			</div>
+	</form>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -35,10 +44,10 @@
           </ul>
          </li>
          <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">BOTTOM<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PANTS<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="${pageContext.request.contextPath }/long/">LONG</a></li>
-            <li><a href="${pageContext.request.contextPath }/short/">SHORT</a></li>
+            <li><a href="${pageContext.request.contextPath }/jean/">JEAN</a></li>
+            <li><a href="${pageContext.request.contextPath }/slacks/">SLACKS</a></li>
           </ul>
           </li>
           <li class="dropdown">
@@ -46,10 +55,10 @@
           <ul class="dropdown-menu">
             <li><a href="${pageContext.request.contextPath }/coat/">COAT</a></li>
             <li><a href="${pageContext.request.contextPath }/jacket/">JACKET</a></li>
-            <li><a href="${pageContext.request.contextPath }/cadigan/">CARDIGAN</a></li>
+            <li><a href="${pageContext.request.contextPath }/outerc/">CARDIGAN</a></li>
           </ul>
         </li>
-        <li><a href="${pageContext.request.contextPath }/sale">S A L E</a></li>
+        <li><a href="${pageContext.request.contextPath }/qna">QnA</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
