--- a/project03/src/main/webapp/WEB-INF/views/template/menu.jspf
+++ b/project03/src/main/webapp/WEB-INF/views/template/menu.jspf
@@ -5,13 +5,13 @@
 			<div class="login">
 				<c:if test="${customer != null&&customer.user_level==2}">
 					<p>${customer.user_name }님 로그인 중</p><br/>
-				<p><a href="./mypage">마이페이지</a></p>
-				<p><a href="./logout">로그아웃</a></p>
+				<p><a href="${pageContext.request.contextPath }/mypage/${customer.user_id}">마이페이지</a></p>
+				<p><a href="${pageContext.request.contextPath }/logout">로그아웃</a></p>
 				</c:if>
 				<c:if test="${customer != null&&customer.user_level==1}">
 					<p>${customer.user_name }님 로그인 중</p><br/>
-				<p><a href="./manager/">관리자 페이지</a></p>
-				<p><a href="./logout">로그아웃</a></p>
+				<p><a href="${pageContext.request.contextPath }/manager/">관리자 페이지</a></p>
+				<p><a href="${pageContext.request.contextPath }/logout">로그아웃</a></p>
 				</c:if>
 				<c:if test="${customer == null}">
 				<p><a href="${pageContext.request.contextPath }/login">로그인&nbsp;&nbsp;&nbsp;l</a></p>
