--- a/homme/src/main/webapp/WEB-INF/views/template/header.jspf
+++ b/homme/src/main/webapp/WEB-INF/views/template/header.jspf
@@ -1,11 +1,12 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+    
 	<link rel="stylesheet" type="text/css" 
 		href="${pageContext.request.contextPath }/resources/css/bootstrap.css"/>
 	<script type="text/javascript" 
-		src="${pageContext.request.contextPath }/resources/js/jquery-1.12.4.min.js"></script>
+	src="${pageContext.request.contextPath }/resources/js/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript" 
-		src="${pageContext.request.contextPath }/resources/js/bootstrap.js"></script>
+	src="${pageContext.request.contextPath }/resources/js/bootstrap.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 		$("#logoutBtn").on("click", function(){
@@ -29,14 +30,4 @@
 			text-decoration: none;
 			color: black;
 		}
-
 		</style>
-
-	<script type="text/javascript" 
-	src="${pageContext.request.contextPath }/resources/js/jquery-1.12.4.min.js"></script>
-	<script type="text/javascript" 
-	src="${pageContext.request.contextPath }/resources/js/bootstrap.js"></script>
-	<script type="text/javascript">
-</script>
-	
-	</script>
