--- a/homme/src/main/webapp/WEB-INF/views/template/menu.jspf
+++ b/homme/src/main/webapp/WEB-INF/views/template/menu.jspf
@@ -1,22 +1,24 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>    
 <form name='homeForm' method="post" action="/login">
 			<div class="login">
 				<c:if test="${customer != null&&customer.user_level==2}">
 					<p>${customer.user_name }님 로그인 중</p><br/>
-				<p><a href="${pageContext.request.contextPath }/mypage/${customer.user_id}">마이페이지</a></p>
-				<p><a href="${pageContext.request.contextPath }/logout">로그아웃</a></p>
+				<p><a href="./mypage">마이페이지</a></p>
+				<p><a href="./logout">로그아웃</a></p>
 				</c:if>
 				<c:if test="${customer != null&&customer.user_level==1}">
 					<p>${customer.user_name }님 로그인 중</p><br/>
-				<p><a href="${pageContext.request.contextPath }/manager/">관리자 페이지</a></p>
-				<p><a href="${pageContext.request.contextPath }/logout">로그아웃</a></p>
+				<p><a href="./manager/">관리자 페이지</a></p>
+				<p><a href="./logout">로그아웃</a></p>
 				</c:if>
 				<c:if test="${customer == null}">
 				<p><a href="${pageContext.request.contextPath }/login">로그인&nbsp;&nbsp;&nbsp;l</a></p>
 				<p><a href="${pageContext.request.contextPath }/register">&nbsp;&nbsp;&nbsp;회원가입</a></p>
 				</c:if>
 			</div>
-</form>
+	</form>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,6 +34,7 @@
       </button>
       <a class="navbar-brand" href="#">H O M M E</a>
     </div>
+
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="droplist">
       <ul class="nav navbar-nav">
@@ -46,11 +49,11 @@
             <li><a href="${pageContext.request.contextPath }/sweater/">SWEATER</a></li>
           </ul>
          </li>
-         <li id= "pantsMenu" class="dropdown">
+         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PANTS<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="${pageContext.request.contextPath }/pants/">데님</a></li>
-            <li><a href="${pageContext.request.contextPath }/pants/">슬랙스</a></li>
+            <li><a href="${pageContext.request.contextPath }/jean/">JEAN</a></li>
+            <li><a href="${pageContext.request.contextPath }/slacks/">SLACKS</a></li>
           </ul>
           </li>
           <li class="dropdown">
@@ -58,13 +61,17 @@
           <ul class="dropdown-menu">
             <li><a href="${pageContext.request.contextPath }/coat/">COAT</a></li>
             <li><a href="${pageContext.request.contextPath }/jacket/">JACKET</a></li>
-            <li><a href="${pageContext.request.contextPath }/cardigan/">CARDIGAN</a></li>
+            <li><a href="${pageContext.request.contextPath }/outerc/">CARDIGAN</a></li>
           </ul>
         </li>
-        <li><a href="${pageContext.request.contextPath }/qna">QnA</a></li>
+        <li><a href="${pageContext.request.contextPath }/qna/">QnA</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-
+<div class="container">
+	<div class="row" id="header">
+		<div class="col-md-12"></div>
+	</div>
+	<div class="row" id="content">
+		<div class="col-md-12">
