--- a/homme/src/main/webapp/WEB-INF/views/template/managermenu.jspf
+++ b/homme/src/main/webapp/WEB-INF/views/template/managermenu.jspf
@@ -1,30 +1,16 @@
-<<<<<<< HEAD
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>    
-=======
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
->>>>>>> zero-1
-<form name='homeForm' method="post" action="/login">
-			<div class="login">
-				<c:if test="${customer != null}">
-					<p>${customer.user_name }님 로그인 중</p><br/>
-<<<<<<< HEAD
-				<p><a href="${pageContext.request.contextPath }/logout">로그아웃</a></p>
-=======
-				<p><a href="../logout">로그아웃</a></p>
->>>>>>> zero-1
-				</c:if>
-				<c:if test="${customer == null}">
-				<p><a href="../login">로그인&nbsp;&nbsp;&nbsp;l</a></p>
-				<p><a href="../register">&nbsp;&nbsp;&nbsp;회원가입</a></p>
-				</c:if>
-			</div>
-<<<<<<< HEAD
-</form>
-=======
-	</form>
->>>>>>> zero-1
+<<form name='homeForm' method="post" action="/login">
+         <div class="login">
+            <c:if test="${customer != null}">
+               <p>${customer.user_name }님 로그인 중</p><br/>
+            <p><a href="${pageContext.request.contextPath }/logout">로그아웃</a></p>
+            </c:if>
+            <c:if test="${customer == null}">
+            <p><a href="../login">로그인&nbsp;&nbsp;&nbsp;l</a></p>
+            <p><a href="../register">&nbsp;&nbsp;&nbsp;회원가입</a></p>
+            </c:if>
+         </div>
+   </form>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -69,9 +55,9 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="container">
-	<div class="row" id="header">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row" id="content">
-		<div class="col-md-12">
-		 <!-- start content -->
+   <div class="row" id="header">
+      <div class="col-md-12"></div>
+   </div>
+   <div class="row" id="content">
+      <div class="col-md-12">
+       <!-- start content -->
